# flues

./: .gitignore  CLAUDE.md  README.md  build_pm_synth.sh  build_synths.sh  package.json  vite.config.js
.github/workflows/: deploy.yml
docs/: DISYN-PLAN.md  MIDI-PLAN.md  POLY-PLAN.md  adding-new-interface-guide.md  disyn-requirements.md  floozy-prompt.md  interface-algorithms-research.md  interface-refactoring-summary.md  interface-signal-flow.md  safari-fix.md
docs/manual/: breath.md
docs/reference/: distortion-synthesis.html  reed-kimi.md
experiments/clarinet-synth/: .gitignore  README.md  index.html  package-lock.json  package.json  possible-fix.md  vite.config.js
experiments/clarinet-synth/src/: constants.js  main.js
experiments/clarinet-synth/src/audio/: ClarinetEngine.js  ClarinetProcessor.js  clarinet-worklet.js
experiments/clarinet-synth/src/ui/: KeyboardController.js  KnobController.js  Visualizer.js
experiments/clarinet-synth/tests/: app.spec.js
experiments/disyn/: README.md  package.json  vite.config.js  vitest.config.js
experiments/disyn/docs/: DISYN-LV2.md
experiments/disyn/scripts/: copy-worklet-modules.cjs
experiments/disyn/src/: main.js  styles.css
experiments/disyn/src/audio/: AlgorithmRegistry.js  DisynEngine.js  disyn-worklet.js
experiments/disyn/src/ui/: AppView.js
experiments/disyn/tests/: algorithmRegistry.spec.js
experiments/pm-synth/: README.md  index.html  package-lock.json  package.json  playwright.config.js  repomix-output.xml  vite.config.js  vitest.config.js
experiments/pm-synth/docs/: IMPLEMENTATION_STATUS.md  PLAN.md  architecture.mmd
experiments/pm-synth/public/: manifest.webmanifest
experiments/pm-synth/src/: constants.js  main.js
experiments/pm-synth/src/audio/: ClarinetEngine.js  PMSynthEngine.js  PMSynthProcessor.js  clarinet-worklet.js  pm-synth-worklet.js
experiments/pm-synth/src/ui/: KeyboardController.js  KnobController.js  MidiController.js  RotarySwitchController.js  Visualizer.js
experiments/pm-synth/src/utils/: signalAnalysis.js
experiments/shared/: README.md  index.js
experiments/shared/audio/: EnvelopeAR.js  ReverbSchroeder.js
experiments/shared/midi/: MidiInputManager.js
experiments/shared/ui/: KeyboardInput.js  KnobControl.js
gtk-synth/: README.md  STATUS.md  meson.build
gtk-synth/docs/: PORTING_NOTES.md
gtk-synth/experiments/disyn/: index.html  package.json  vite.config.js  vitest.config.js
gtk-synth/experiments/disyn/src/audio/: AlgorithmRegistry.js
gtk-synth/include/: audio_backend.h  dsp_modules.h  dsp_utils.h  interface_strategy.h  pm_synth.h
gtk-synth/reference/docs/: IMPLEMENTATION_STATUS.md  interface-project-prompt.md  requirements.md
gtk-synth/reference/modules/: DelayLinesModule.js  FeedbackModule.js  InterfaceModule.js  ModulationModule.js  ReverbModule.js
gtk-synth/reference/modules/interface/: InterfaceFactory.js
gtk-synth/reference/modules/interface/strategies/: BowStrategy.js  CrystalStrategy.js  QuantumStrategy.js  VaporStrategy.js
gtk-synth/reference/modules/interface/utils/: DelayUtils.js  NonlinearityLib.js
gtk-synth/src/audio/: audio_backend_pulse.c  pm_synth_engine.c
gtk-synth/src/audio/modules/: delay_lines_module.c  envelope_module.c  feedback_module.c  filter_module.c  interface_module.c  interface_strategy.c  modulation_module.c  reverb_module.c  sources_module.c
gtk-synth/src/audio/modules/strategies/: all_strategies_stub.c  bell_strategy.c  bow_strategy.c  brass_strategy.c  crystal_strategy.c  drum_strategy.c  flute_strategy.c  hit_strategy.c  plasma_strategy.c  pluck_strategy.c  quantum_strategy.c  reed_strategy.c  vapor_strategy.c
gtk-synth/src/ui/: synth_window.c  synth_window.c.backup
html/: audio-test-simple.html  clarinet-docs.md  clarinet-engine.js  clarinet-fixed-audio.html  clarinet-standalone.html  clarinet-synth.html  main-app.js  ui-controller.js
kxmx_bluemchen/: BOM_kxmx_bluemchen_back_2025-10-14.csv  PickAndPlace_kxmx_bluemchen_back_2025-10-07.csv  PickAndPlace_kxmx_bluemchen_back_2025-10-14.csv
kxmx_bluemchen/back/: Gerber_BoardOutline.GKO  Gerber_BottomLayer.GBL  Gerber_BottomSilkLayer.GBO  Gerber_BottomSolderMaskLayer.GBS  Gerber_Drill_PTH.DRL  Gerber_TopLayer.GTL  Gerber_TopPasteMaskLayer.GTP  Gerber_TopSilkLayer.GTO  Gerber_TopSolderMaskLayer.GTS  ReadOnly.Mechanical
kxmx_bluemchen/danny/: PickAndPlace_kxmx_bluemchen_back_2025-10-07.csv
lv2/disyn/: CMakeLists.txt  README.md
lv2/disyn/disyn.lv2/: disyn.ttl  manifest.ttl
lv2/disyn/src/: DisynEngine.hpp  disyn_plugin.cpp
lv2/disyn/src/modules/: OscillatorModule.hpp
lv2/disyn/src/ui/: disyn_ui_x11.c
lv2/floozy/: CMakeLists.txt  README.md
lv2/floozy-dev/: CMakeLists.txt  README.md
lv2/floozy-dev/floozy-dev.lv2/: floozy.ttl  manifest.ttl
lv2/floozy-dev/src/: FloozyEngine.hpp  floozy_plugin.cpp
lv2/floozy-dev/src/modules/: FloozySourceModule.hpp
lv2/floozy-dev/src/ui/: floozy_ui_x11.c
lv2/floozy-poly/: CMakeLists.txt  README.md
lv2/floozy-poly/floozy-poly.lv2/: floozy.ttl  manifest.ttl
lv2/floozy-poly/src/: FloozyEngine.hpp  floozy_plugin.cpp
lv2/floozy/floozy.lv2/: floozy.ttl  manifest.ttl
lv2/floozy/src/: FloozyEngine.hpp  floozy_plugin.cpp
lv2/floozy/src/modules/: FloozySourceModule.hpp
lv2/floozy/src/ui/: floozy_ui_x11.c
lv2/pm-synth/: CMakeLists.txt  FIX_ARDOUR_GTK3.md  README.md  REAPER_DEBUG.md  TESTING_IN_REAPER.md
lv2/pm-synth/pm-synth.lv2/: manifest.ttl  pm-synth.ttl
lv2/pm-synth/src/: PMSynthEngine.hpp  Random.hpp  pm_synth_plugin.cpp
lv2/pm-synth/src/modules/: InterfaceModule.hpp
lv2/pm-synth/src/modules/interface/strategies/: FluteStrategy.hpp
lv2/pm-synth/src/ui/: FluesKnob.c  FluesKnob.h  pm_synth_ui.c  pm_synth_ui_x11.c
www/: index.html
www/clarinet-synth/: index.html
www/clarinet-synth/assets/: index-3bg4U7-_.js  index-AGTzrrav.js  index-C0anWpxj.js  index-CtIm5pJl.js  index-DuhUbqzW.js  index-pzCr2dUq.js
www/pm-synth/: index.html  manifest.webmanifest  sw.js
www/pm-synth/assets/: clarinet-worklet-DH4fXPyd.js  index-02VB4y_s.js  index-DnNx9bx5.js  pm-synth-worklet-DfLkvfOi.js
(+33 files in other folders)
